내장형 DB로 SqlService 제작, XML을 annotaion으로 변환하는 작업 시작