@@ -6,8 +6,11 @@ plugins {
 group = 'com.example'
 version = '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
-targetCompatibility = 1.8
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
+}
 
 repositories {
     mavenCentral()
@@ -23,121 +26,151 @@ dependencies {
     implementation "org.springframework:spring-jdbc:3.1.2.RELEASE"
     implementation "org.springframework:spring-expression:3.1.2.RELEASE"
     implementation "org.springframework:spring-context-support:3.1.2.RELEASE"
+    implementation "org.springframework:spring-asm:3.1.2.RELEASE"
+    implementation "org.springframework:spring-aspects:3.1.2.RELEASE"
 
+    // Spring 3.1에서는 CGLIB 필요
+    implementation "cglib:cglib:2.2.2"
+    implementation "asm:asm:3.3.1"
 
-    // ===== JavaMail / Activation =====
-    implementation 'javax.mail:mail:1.4.7'
-    implementation 'javax.activation:activation:1.1.1'
+    // OXM (JAXB 2 기반)
+    implementation "org.springframework:spring-oxm:4.2.9.RELEASE"
+
+    implementation "javax.xml.bind:jaxb-api:2.3.1"
+    implementation "org.glassfish.jaxb:jaxb-runtime:2.3.1"
+
+    implementation "javax.annotation:javax.annotation-api:1.3.2"
+
+    // ===== JavaMail =====
+    implementation "javax.mail:mail:1.4.7"
+    implementation "javax.activation:activation:1.1.1"
 
     // ===== JDBC =====
-    implementation 'mysql:mysql-connector-java:5.1.49' // 8.x 말고 5.x 권장
+    implementation "mysql:mysql-connector-java:5.1.49"
 
     // ===== Logging =====
-    implementation 'org.slf4j:slf4j-api:1.7.36'
-    implementation 'ch.qos.logback:logback-classic:1.2.12'
-    implementation 'javax.annotation:javax.annotation-api:1.3.2'
-
-    implementation "jakarta.annotation:jakarta.annotation-api:2.1.1"    
-    implementation 'org.springframework:spring-oxm:4.2.9.RELEASE'
-    // implementation 'org.springframework:spring-oxm:7.0.8'
-
-    implementation "com.sun.xml.bind:jaxb-impl:4.0.9"
-    implementation 'javax.xml.bind:jaxb-api:2.3.1'
-    implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+    implementation "org.slf4j:slf4j-api:1.7.36"
+    implementation "ch.qos.logback:logback-classic:1.2.12"
 
     // ===== Tests =====
-    testImplementation 'junit:junit:4.13.2'
+    testImplementation "junit:junit:4.13.2"
     testImplementation "org.springframework:spring-test:3.1.2.RELEASE"
-	testImplementation 'org.hamcrest:hamcrest:2.2'
-	testImplementation 'org.mockito:mockito-core:5.12.0'
-	testImplementation 'org.mockito:mockito-inline:5.2.0'
-	testImplementation "org.aspectj:aspectjtools:1.6.6"
-
-    testImplementation "jakarta.annotation:jakarta.annotation-api:2.1.1"
-    testImplementation 'org.springframework:spring-oxm:4.2.9.RELEASE'
-    // testImplementation 'org.springframework:spring-oxm:7.0.8'
-
-    testImplementation "com.sun.xml.bind:jaxb-impl:4.0.9"
-    testImplementation 'javax.xml.bind:jaxb-api:2.3.1'
-    testImplementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
-    testImplementation "org.hsqldb:hsqldb:2.7.4"
+    testImplementation "org.hamcrest:hamcrest:2.2"
+    testImplementation "org.mockito:mockito-core:4.11.0"
+    testImplementation "org.mockito:mockito-inline:4.11.0"
+    testImplementation "org.hsqldb:hsqldb:2.5.2"
 }
 
 test {
     useJUnit()
 }
 
-
 xjc {
     xjcVersion.set("2.3.8")
-    // xsd 파일의 위치
     xsdDir.set(layout.projectDirectory.dir("src/main/resources"))
-    // 어떤 xsd 파일을 사용할지
-    includes.set([
-        "sqlmap.xsd"
-    ])
-    // 생성한 클래스를 어떤 패키지에 포함시킬지.
-    // 실제 생성 경로는 build/generated/sources/xjc/... 이지만 set에 작성한 프로젝트의 패키지 경로로 사용할 수 있음.
-    defaultPackage.set(
-        "com.example.springbook.user.sqlservice.jaxb"
-    )
+    includes.set(["sqlmap.xsd"])
+    defaultPackage.set("com.example.springbook.user.sqlservice.jaxb")
 }
 
-
 // plugins {
-// 	id 'java'
-// 	id 'org.springframework.boot' version '3.4.4'
-// 	id 'io.spring.dependency-management' version '1.1.7'
+//     id 'java'
+//     id("com.github.bjornvester.xjc") version "1.9.1"
 // }
-
-// group = 'com.example'
-// version = '0.0.1-SNAPSHOT'
 
 // java {
-// 	toolchain {
-// 		languageVersion = JavaLanguageVersion.of(17)
-// 	}
+//     toolchain {
+//         languageVersion = JavaLanguageVersion.of(8)
+//     }
 // }
+// group = 'com.example'
+// version = '1.0-SNAPSHOT'
+
+// sourceCompatibility = 1.8
+// targetCompatibility = 1.8
 
 // repositories {
-// 	mavenCentral()
+//     mavenCentral()
 // }
 
 // dependencies {
-// 	implementation 'org.springframework.boot:spring-boot-starter'
-// 	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
-//     implementation 'mysql:mysql-connector-java:8.0.33'
-// 	implementation 'junit:junit:4.13.2'
-// 	implementation 'org.springframework.boot:spring-boot-starter-test'
-// 	implementation 'org.springframework:spring-context-support:6.2.9'
-// 	// javax.activation
-// 	implementation 'javax.activation:activation:1.1.1'
+//     // ===== Spring Framework 3.1.2 =====
+//     implementation "org.springframework:spring-context:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-beans:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-core:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-aop:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-tx:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-jdbc:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-expression:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-context-support:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-asm:3.1.2.RELEASE"
+//     // implementation "org.springframework:spring-oxm:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-test:3.1.2.RELEASE"
+//     implementation "org.springframework:spring-aspects:3.1.2.RELEASE"
+//     // implementation 'cglib:cglib-nodep:2.2.2'
 
-// 	// javax.mail
-// 	implementation 'javax.mail:mail:1.4.7'
+//     // ===== JavaMail / Activation =====
+//     implementation 'javax.mail:mail:1.4.7'
+//     implementation 'javax.activation:activation:1.1.1'
 
-// 	implementation 'aopalliance:aopalliance:1.0'
-// 	implementation "org.springframework:spring-aop:3.0.7.RELEASE"
+//     // ===== JDBC =====
+//     implementation 'mysql:mysql-connector-java:5.1.49' // 8.x 말고 5.x 권장
 
-//     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//     // ===== Logging =====
+//     implementation 'org.slf4j:slf4j-api:1.7.36'
+//     implementation 'ch.qos.logback:logback-classic:1.2.12'
+//     implementation 'javax.annotation:javax.annotation-api:1.3.2'
+
+//     // implementation "jakarta.annotation:jakarta.annotation-api:2.1.1"    
+//     implementation 'org.springframework:spring-oxm:4.2.9.RELEASE'
+//     // implementation 'org.springframework:spring-oxm:7.0.8'
+
+//     implementation "com.sun.xml.bind:jaxb-impl:4.0.9"
+//     implementation 'javax.xml.bind:jaxb-api:2.3.1'
+//     implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+
+//     implementation 'cglib:cglib:2.2.2'
+//     implementation 'asm:asm:3.3.1'
+
+//     // ===== Tests =====
 //     testImplementation 'junit:junit:4.13.2'
-// 	// testImplementation 'javax.activation:com.springsource.javax.activation:1.1.0'
-// 	// testImplementation 'javax.mail:com.springsource.javax.mail:1.4.0'
-// 	// testImplementation 'org.springframework:spring-context-support:6.2.9'
-    
-	
+//     testImplementation "org.springframework:spring-test:3.1.2.RELEASE"
+// 	testImplementation 'org.hamcrest:hamcrest:2.2'
+// 	testImplementation 'org.mockito:mockito-core:5.12.0'
+// 	testImplementation 'org.mockito:mockito-inline:5.2.0'
+// 	testImplementation "org.aspectj:aspectjtools:1.6.6"
 
-// 	// implementation 'org.springframework.boot:spring-boot-starter'
-// 	// implementation 'org.springframework.boot:spring-boot-starter-test'
-// 	// // implementation("org.junit.jupiter:junit-jupiter")
-// 	// // implementation 'org.junit.platform:junit-platform-launcher'
-// 	// implementation("junit:junit:4.13.2")
-// 	// // testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-// 	// implementation 'mysql:mysql-connector-java:8.0.33'
-// 	// implementation("org.springframework:spring-jdbc:3.0.7.RELEASE")
+//     // testImplementation "jakarta.annotation:jakarta.annotation-api:2.1.1"
+//     // testImplementation "org.springframework:spring-oxm:3.1.2.RELEASE"
+//     // testImplementation 'org.springframework:spring-oxm:7.0.8'
+
+//     testImplementation "com.sun.xml.bind:jaxb-impl:4.0.9"
+//     testImplementation 'javax.xml.bind:jaxb-api:2.3.1'
+//     testImplementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
+//     testImplementation "org.hsqldb:hsqldb:2.7.4"
+//     // testImplementation 'cglib:cglib-nodep:2.2.2'
+//     testImplementation 'cglib:cglib:2.2.2'
+//     testImplementation 'asm:asm:3.3.1'
 // }
 
-// tasks.named('test') {
-// 	useJUnitPlatform()
+// test {
+//     useJUnit()
+
+//     // jvmArgs += [
+//     //     "--add-opens=java.base/java.lang=ALL-UNNAMED"
+//     // ]
 // }
 
+// xjc {
+//     xjcVersion.set("2.3.8")
+//     // xsd 파일의 위치
+//     xsdDir.set(layout.projectDirectory.dir("src/main/resources"))
+//     // 어떤 xsd 파일을 사용할지
+//     includes.set([
+//         "sqlmap.xsd"
+//     ])
+//     // 생성한 클래스를 어떤 패키지에 포함시킬지.
+//     // 실제 생성 경로는 build/generated/sources/xjc/... 이지만 set에 작성한 프로젝트의 패키지 경로로 사용할 수 있음.
+//     defaultPackage.set(
+//         "com.example.springbook.user.sqlservice.jaxb"
+//     )
+// }
